fixed help-modal error where things weren't moved far enough offscreen

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -444,7 +444,7 @@ html, body {
 		background: #ebebeb;
 		margin: 1.5em 0 0 0;
 		position:absolute;
-		left:-770px;
+		left:-1500px;
 		width:80%;
 		&.general { left: 20px; }
 		ul {
